# website-agent-studio

./: .gitignore  LICENSE  README.md  pyproject.toml
.agents/plugins/: marketplace.json
docs/: claude-code.md  installing.md  privacy-policy.md  publishing.md  quickstart.md  repo-architecture.md  roadmap.md  runtime.md  terms-of-use.md
examples/arq-site/: project_profile.json  project_state.json  workflow_queue.json
examples/audio-brand-site/: project_profile.json  project_state.json  workflow_queue.json
plugins/website-agent-studio/.codex-plugin/: plugin.json
plugins/website-agent-studio/agents/: openai.yaml
plugins/website-agent-studio/references/: phase-model.md  release-gates.md  state-files.md
plugins/website-agent-studio/runtime/website_agent_studio/: __init__.py  cli.py  constants.py  engine.py  executor.py  memory.py  paths.py  registry.py  storage.py
plugins/website-agent-studio/runtime/website_agent_studio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
plugins/website-agent-studio/schemas/: agent_response.schema.json
plugins/website-agent-studio/scripts/: agent_runtime.py  init_project.py  mark_task.py  next_task.py  run_claude_code.py  run_codex_exec.py  set_phase.py  validate_plugin.py
plugins/website-agent-studio/skills/backend-integrations/: SKILL.md
plugins/website-agent-studio/templates/: agent_response.template.json  orchestrator.md  project_profile.template.json  project_state.template.json  workflow_queue.template.json
tests/: test_runtime.py  test_shell_presets.py
(+7 files in other folders)
